ss_admin_console/main/default/objects/SObjectLoadEvent__e/SObjectLoadEvent__e.object-meta.xml
<CustomObject>
    <label>SObjectLoadEvent</label>
    <pluralLabel>SObjectLoadEvents</pluralLabel>
</CustomObject>