ss_admin_console/main/default/objects/SObjectLoadEvent__e/fields/Message_Title__c.field-meta.xml
<CustomField>
    <fullName>Message_Title__c</fullName>
    <label>Message Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>