ss_admin_console/main/default/objects/SObjectLoadEvent__e/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>