ss_admin_console/main/default/objects/SObjectLoadEvent__e/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>