ss_admin_console/main/default/objects/SObjectLoadEvent__e/fields/sObjectType__c.field-meta.xml
<CustomField>
    <fullName>sObjectType__c</fullName>
    <label>sObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>